# SonicoVox

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.ps1  clean.bat  clean.ps1  debug.bat  debug.ps1  test.bat  test.ps1  vcpkg.json
config/: SETTINGS.md  settings.json  settings.schema.json
overlays/ring/: CMakeLists.txt  VOSK_INTEGRATION.md
overlays/ring/include/ring/: audio_capture.hpp  overlay_window.hpp  ring_app.hpp  ring_renderer.hpp  speech_recognizer.hpp  speech_service.hpp  subtitle_config.hpp  subtitle_renderer.hpp  vosk_recognizer.hpp
overlays/ring/src/: audio_capture.cpp  main.cpp  overlay_window.cpp  ring_app.cpp  ring_renderer.cpp  speech_recognizer.cpp  speech_service.cpp  subtitle_renderer.cpp  vosk_recognizer.cpp
scripts/: vosk_worker.py
